--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: php
 
 php:
-  - 7.0
+  - '5.6'
+  - '7.1'
 
 services:
   - mysql
 
-env:
-  matrix:
-    - COMPOSER_FLAGS="--prefer-lowest"
-    - COMPOSER_FLAGS=""
-
 before_script:
-  - travis_retry composer self-update
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+  - composer self-update
+  - composer install --prefer-source --no-interaction
   - mysql -e 'create database laravel_migrate_check;' -uroot
+
+notifications:
+  email: false
