--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
     ],
     "require": {
         "php": "^7.0",
-        "illuminate/console": "^5.3.28",
-        "illuminate/events": "^5.3.28"
+        "illuminate/console": "^5.5.17",
+        "illuminate/events": "^5.5.17"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^3.3",
-        "phpunit/phpunit": "5.*"
+        "orchestra/testbench": "~3.0",
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "psr-4": {
