--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": "^7.0",
-        "illuminate/console": "^5.5.17",
-        "illuminate/events": "^5.5.17"
+        "illuminate/console": "^5.5.17 | ^6.0",
+        "illuminate/events": "^5.5.17 | ^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
