--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "illuminate/console": "^5.5.17",
-        "illuminate/events": "^5.5.17"
+        "php": "^7.2",
+        "illuminate/console": "^6.0",
+        "illuminate/events": "^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "~3.0",
-        "phpunit/phpunit": "~6.0"
+        "orchestra/testbench": "~4.0",
+        "phpunit/phpunit": "~8.0"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +38,7 @@
         }
     },
     "scripts": {
-        "test": "/vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit"
     },
     "config": {
         "sort-packages": true
