--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "illuminate/console": "^6.0",
-        "illuminate/events": "^6.0"
+        "php": "^7.0",
+        "illuminate/console": "^5.5.17 | ^6.0",
+        "illuminate/events": "^5.5.17 | ^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
