--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/console": "^5.5.17 | ^6.0",
-        "illuminate/events": "^5.5.17 | ^6.0"
+        "php": "^7.2",
+        "illuminate/console": "5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0",
+        "illuminate/events": "5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "~3.0",
-        "phpunit/phpunit": "~6.0"
+        "orchestra/testbench": "3.6.* || 3.7.* || 3.8.* || 3.9.* || ^4.0 || ^5.0",
+        "phpunit/phpunit": "^7.5 || ^8.4"
     },
     "autoload": {
         "psr-4": {
