--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/console": "5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0",
-        "illuminate/events": "5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0"
+        "illuminate/console": "^6|^7|^8",
+        "illuminate/events": "^6|^7|^8"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
