--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2||^8.0",
         "illuminate/console": "^6|^7|^8",
         "illuminate/events": "^6|^7|^8"
     },
