--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
     ],
     "require": {
         "php": "^7.2||^8.0",
-        "illuminate/console": "^6|^7|^8",
-        "illuminate/events": "^6|^7|^8"
+        "illuminate/console": "^6|^7|^8|^9",
+        "illuminate/events": "^6|^7|^8|^9"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "3.6.* || 3.7.* || 3.8.* || 3.9.* || ^4.0 || ^5.0",
-        "phpunit/phpunit": "^7.5 || ^8.4"
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
