--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
     ],
     "require": {
         "php": "^7.2||^8.0",
-        "illuminate/console": "^6|^7|^8|^9|^10.0",
-        "illuminate/events": "^6|^7|^8|^9|^10.0"
+        "illuminate/console": "^6|^7|^8|^9|^10.0||^11.0",
+        "illuminate/events": "^6|^7|^8|^9|^10.0||^11.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^6.0|^8.0",
-        "phpunit/phpunit": "^9.0"
+        "orchestra/testbench": "^6.0|^8.0||^9.0",
+        "phpunit/phpunit": "^9.0||^10.5"
     },
     "autoload": {
         "psr-4": {
